@@ -190,7 +190,7 @@ dnl DEFS RETABORTTYPE, ABORT_VOLATILE
 CL_ABORT
 dnl DEFS HAVE_PERROR_DECL
 CL_PERROR
-AC_CHECK_FUNCS(strerror)dnl ==> HAVE_STRERROR
+AC_CHECK_FUNCS(strerror sysconf getdtablesize)
 dnl DEFS HAVE_PUTENV, HAVE_SETENV
 CL_PUTENV
 dnl DEFS HAVE_LC_MESSAGES
